<resources>
    <string name="app_name">Fitness Tracker</string>

    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>


    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="weight">Peso (kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="calc">Calcular</string>
    <string name="age">Idade</string>

    <string name="message">Os campos devem ser preenchidos e diferente de zero</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="imc_normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_dialog">Imc: %1$.2f</string>
    <string name="tmb_dialog">Tmb: %1$.2f</string>
    <string name="save">Salvar</string>
    <string name="saved">Registro IMC salvo</string>

    <string name="list_response">Resultado: %1$.2f Data: %2$s</string>

    <string name="search">Buscar</string>
    <string name="delete_message">Você realmente quer excluir esse item?</string>


</resources>