<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tmb_desc" />

        <EditText
            android:id="@+id/edit_weightTmb"
            style="@style/EditForm"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/edit_heightTmb"
            style="@style/EditForm"
            android:hint="@string/height" />

        <EditText
            android:id="@+id/edit_ageTmb"
            style="@style/EditForm"
            android:hint="@string/age" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <AutoCompleteTextView
                android:id="@+id/auto_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
            
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_calcTmb"
            style="@style/ButtonForm"
            android:text="@string/calc" />

    </LinearLayout>
</ScrollView>